# logger

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
include/cantina/: ansi.h  logger.h  logger_macros.h  syslog_interface.h
src/: CMakeLists.txt  ansi.cpp  logger.cpp  syslog_interface.cpp
test/: CMakeLists.txt
test/custom_logger/: CMakeLists.txt  test_custom_logger.cpp
test/logger/: CMakeLists.txt  test_logger.cpp
